--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         Please enable it to continue.</strong>
   </noscript>
   <!-- navy, gray, orange, blue, green, aqua, dark -->
-  <div id="app" class="aqua"></div>
+  <div id="app" class="navy"></div>
   <!-- built files will be auto injected -->
 </body>
 
